# todo-fastapi

./: .gitignore  pyproject.toml  start.sh
.github/ISSUE_TEMPLATE/: api.md  bug.md  chore.md  doc.md  feature.md  refactor.md
app/: dependencies.py  main.py
app/core/: config.py
app/db/: session.py
app/models/: enums.py  project.py  todo.py
app/routers/: projects.py  todos.py
app/schemas/: page.py  project.py  todo.py
app/services/: project.py  todo.py
docs/: diagram.drawio  openapi.yaml  sync_notion.py
tests/: test_projects.py  test_todos.py
