[project]
name = "todo-fastapi"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "notion-client>=3.0.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "sqlmodel>=0.0.37",
]
